# Regen_analytics_app

./: .ebignore  .env_template  .gitignore  Dockerfile  Dockerfile.dev  LICENSE  README.md  app.py  config.py  config_loader.py  docker-compose.yaml  flask_app.py  gunicorn.conf.py  logging_config.py  main.py  pyproject.toml  requirements.txt  shared_server.py
.elasticbeanstalk/: config.yml
.github/workflows/: aws-debug.yml  deploy.yml
auth/: create_auth_user.py  db.py  supabase_auth.py  supabase_rls_policies.sql  supabase_service.py
db/: create_tables.sql  db_init.py  models.py  ndvipeaksannual.sql  ndvipeaksmonthly.sql  trg_update_ndvi_peaks_annual.sql  trg_update_ndvi_peaks_monthly.sql  update_ndvi_peaks_annual.sql  update_ndvi_peaks_monthly.sql  update_soildata_region_geometry.sql  utils.py
db/triggers_local/: trg_update_moisturecontent.sql  trg_update_ndvi_peaks_annual.sql  trg_update_soildata_region_geometry.sql  update_moisturecontent.sql  update_ndvi_peaks_annual.sql
db/triggers_supabase/: trg_update_moisturecontent.sql  trg_update_ndvipeaksannual.sql  trg_update_ndvipeaksmonthly.sql  trg_update_soildata_region_geometry.sql  update_moisturecontent.sql  update_ndvipeaksannual.sql  update_ndvipeaksmonthly.sql  update_soildata_region_geometry.sql
notebooks/: gee_raster_images.ipynb
scripts/: fix_json.py  git_commit.sh  load_secrets.sh  zip.sh
src/: region_bboxes.py
src/analytics/: farm_stats.py  vi_preprocessing.py
src/auth/: supabase_auth.py
src/backend/: preprocessing.py  vi_timeseries.py
src/dash1/: dash1_main.py  layout.py
src/dash2/: dash2_main.py  layout.py
src/dash3/: dash3_main.py  layout.py
src/db/: db_client.py  db_utils.py
src/farmland_characteristics/: dash2_main.py  layout.py
src/farmland_statistics/: dash3_main.py  layout.py
src/frontend/: layout.py
src/initial_market_data/: dash0_main.py  layout.py
src/polygon_generator/: dash1_main.py  utils.py  (+2 more)
static/: style.css
templates/: index.html
(+46 files in other folders)
