[project]
name = "regen-analytics-app"
version = "0.1.0"
description = "App designed for Regen Organics to generate analytics on farmlands"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.14",
    "dash>=3.1.1",
    "dash-bootstrap-components>=2.0.3",
    "dash-leaflet>=1.1.3",
    "dotenv>=0.9.9",
    "earthengine-api>=1.5.22",
    "geemap>=0.35.3",
    "geoalchemy2>=0.17.1",
    "geopandas>=1.1.1",
    "gunicorn>=23.0.0",
    "ipython>=9.4.0",
    "jinja2>=3.1.6",
    "pandas>=2.3.0",
    "pandera>=0.24.0",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.7",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "sqlmodel>=0.0.24",
    "supabase>=2.17.0",
    "uvicorn>=0.35.0",
]

